--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="initial-scale=1, width=device-width">
+  	
+  	<link rel="stylesheet"  href="./index.css" />
+  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" />
+  	
+  	
+  	
 </head>
 <body>
-    
+  	
+  	<div class="frame">
+    		<div class="blur">
+      			<div class="blur-child">
+      			</div>
+      			<div class="blur-item">
+      			</div>
+    		</div>
+    		<img class="loader-bar-icon" alt="" src="Loader bar.svg">
+    		
+    		<div class="just-a-moment">Just a moment, we’re setting up the meeting for you.</div>
+  	</div>
+  	
+  	
+  	
+  	
 </body>
 </html>
