--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
 </head>
 <body class="body">
   	
-  	<div class="frame">
-    		<div class="blur">
-      			<div class="blur-child">
-      			</div>
-      			<div class="blur-item">
-      			</div>
-    		</div>
-    		<img class="loader-bar-icon" alt="" src="Loader bar.svg">
-    		
-    		<div class="just-a-moment">Just a moment, we’re setting up the meeting for you.</div>
-  	</div>
-  	
+    <div class="frame">
+        <div class="blur-blue">
+        </div>
+        <div class="blur-grey">
+        </div>
+        <img class="loader-bar-icon" alt="" src="Loader bar.svg">
+        <div class="just-a-moment">Just a moment, we’re setting up the meeting for you.</div>
+        </div>
+        </body>
   	
   	
   	
