--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   	
     <div class="frame">
         <div class="blur-blue">
+            <img src="Blur-blue.png" alt="">
         </div>
         <div class="blur-grey">
+            <img src="Blur-grey.png" alt="">
         </div>
         <img class="loader-bar-icon" alt="" src="Loader bar.svg">
         <div class="just-a-moment">Just a moment, we’re setting up the meeting for you.</div>
